[package]

name = "voronoi"
version = "0.1.4"
documentation = "https://docs.rs/voronoi/0.1.4/voronoi/"
authors = [ "Will Turner <rwturner17@gmail.com>" ]
description = "A library to compute Voronoi diagrams, using Fortune's sweepline algorithm"
repository = "https://github.com/petosegan/rust_voronoi"
keywords = ["voronoi", "geometry"]
readme = "Readme.md"
license = "MIT"
edition = "2018"

[dependencies]
rand = "0.7"
ordered-float = "1.0"
log = "0.4"
fnv = "1.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "genvoronoi"
harness = false
